--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
    "trailingComma": "es5",
-   "tabWidth": 3,
+   "tabWidth": 4,
    "semi": true,
-   "singleQuote": false
+   "singleQuote": false,
+   "printWidth": 150
 }
